test/Sema/2010-05-31-palignr.c
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_comment
comment|// RUN: %clang_cc1 -triple x86_64-apple-darwin -ffreestanding -verify -fsyntax-only %s
end_comment

begin_include
include|#
directive|include
file|<tmmintrin.h>
end_include

begin_include
include|#
directive|include
file|<stdint.h>
end_include

begin_decl_stmt
specifier|extern
name|int
name|i
decl_stmt|;
end_decl_stmt

begin_function
name|int
name|main
parameter_list|()
block|{
typedef|typedef
name|int16_t
name|vSInt16
name|__attribute__
typedef|((
name|__vector_size__
typedef|(16)));
name|short
name|dtbl
index|[]
init|=
block|{
literal|1
block|,
literal|2
block|,
literal|3
block|,
literal|4
block|,
literal|5
block|,
literal|6
block|,
literal|7
block|,
literal|8
block|}
decl_stmt|;
name|vSInt16
modifier|*
name|vdtbl
init|=
operator|(
name|vSInt16
operator|*
operator|)
name|dtbl
decl_stmt|;
name|vSInt16
name|v0
decl_stmt|;
name|v0
operator|=
operator|*
name|vdtbl
expr_stmt|;
name|_mm_alignr_epi8
argument_list|(
name|v0
argument_list|,
name|v0
argument_list|,
name|i
argument_list|)
expr_stmt|;
comment|// expected-error {{argument to '__builtin_ia32_palignr128' must be a constant integer}}
return|return
literal|0
return|;
block|}
end_function

end_unit

